<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginTop="24dp"
    tools:context=".view.MainActivity">

    <Button
        android:id="@+id/btn_hitung_luas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung_luas"/>

    <Button
        android:id="@+id/btn_hitung_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung_volume"/>

    <Button
        android:id="@+id/btn_konversi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/konversi"/>
</LinearLayout>