<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.fisika.LuasActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_luas_panjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/panjang"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_luas_lebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lebar"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_submit_luas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hitung"
        android:layout_marginTop="18dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_hasil_hitung_luas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hasil"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"/>


</LinearLayout>